src/test/deca/context/valid/created/print-assign.deca
//Description :
// Test du print d'une assignation
//
// Resultats :
// 2


{
    int x;
    print(x = 2);
}
