src/test/deca/context/invalid/created/double-affect-inits.deca
//Description :
// Test d'une double affectation avec init puis sans
//
// Resultats :
// Erreur

{
    int x;
    int x = 2;
}
